infra/prod/staging/ecs.tf
resource "aws_ecs_cluster" "pgagi_cluster" {
  name = "pgagi-cluster-staging"
}

resource "aws_security_group" "alb_sg" {
  name        = "pgagi-alb-sg-staging"
  description = "Allow HTTP traffic"
  vpc_id      = aws_vpc.pgagi_vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "ecs_sg" {
  name        = "pgagi-ecs-sg-staging"
  description = "Allow traffic from ALB"
  vpc_id      = aws_vpc.pgagi_vpc.id

  ingress {
    from_port       = 3000
    to_port         = 3000
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }

  ingress {
    from_port       = 5000
    to_port         = 5000
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
